Bug 1973721 - Use text-overflow: ellipsis on <moz-input-text> placeholder. r=reusable-components-reviewers,tgiles
So that it's clear when there's overflow.

Differential Revision: https://phabricator.services.mozilla.com/D254839

UltraBlame original commit: 526330227c51e555f1a153bce01567213a2e0c4b

--- a/toolkit/content/widgets/moz-input-text/moz-input-text.css
+++ b/toolkit/content/widgets/moz-input-text/moz-input-text.css
@@ -658,4 +658,16 @@ xxsmall
 )
 ;
 }
+&
+:
+:
+placeholder
+{
+text
+-
+overflow
+:
+ellipsis
+;
+}
 }
